exports[`Breadcrumbs should do nothing if items property is empty 1`] = `
<ol
  className="breadcrumb tc-breadcrumb" />
`;

exports[`Breadcrumbs should render items with ellipsis and 3 visible items by default 1`] = `
<ol
  className="breadcrumb tc-breadcrumb">
  <li
    className="">
    <span
      className="sr-only">
      Text A
    </span>
    <span
      aria-hidden="true">
      …
    </span>
  </li>
  <li
    className="">
    <span>
      Text B
    </span>
  </li>
  <li
    className="">
    <span>
      Text C
    </span>
  </li>
  <li
    className="active">
    <span>
      Text D
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs should render list of items without ellipsis when set enough max items to display 1`] = `
<ol
  className="breadcrumb tc-breadcrumb">
  <li
    className="">
    <span>
      Text A
    </span>
  </li>
  <li
    className="">
    <span>
      Text B
    </span>
  </li>
  <li
    className="">
    <span>
      Text C
    </span>
  </li>
  <li
    className="">
    <span>
      Text D
    </span>
  </li>
  <li
    className="active">
    <span>
      Text E
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs should render small list of items without ellipsis 1`] = `
<ol
  className="breadcrumb tc-breadcrumb">
  <li
    className="">
    <span>
      Text A
    </span>
  </li>
  <li
    className="">
    <span>
      Text B
    </span>
  </li>
  <li
    className="active">
    <span>
      Text C
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs should render small list of items without ellipsis 2`] = `
<ol
  className="breadcrumb tc-breadcrumb">
  <li
    className="">
    <span>
      Text A
    </span>
  </li>
  <li
    className="">
    <span>
      Text B
    </span>
  </li>
  <li
    className="active">
    <span>
      Text C
    </span>
  </li>
</ol>
`;
